# TomaToDoING

./: CMakeLists.txt  README.md  TODO.md  install.sh  ver_plasmoide
org.kde.tomatodoing/: metadata.desktop
org.kde.tomatodoing/contents/code/: dialogs.js  enums.js  localStorage.js  logic.js  sqlite_version.js
org.kde.tomatodoing/contents/config/: config.qml  main.xml
org.kde.tomatodoing/contents/images/: trayIcons.svg~
org.kde.tomatodoing/contents/ui/: FullRepresentation.qml  TrayRepresentation.qml  main.qml
org.kde.tomatodoing/contents/ui/Components/: Arrow.qml  CalendarEventUI.qml  DigitalClock.qml  NoticeText.qml  TimeDisplay.qml  ToDoListViewDelegate.qml  ToDosList.qml  TomateSlider.qml  TomatoidTimer.qml
org.kde.tomatodoing/contents/ui/Configuration/: General.qml
org.kde.tomatodoing/contents/ui/Dialogs/: Alert.qml  ConfigurableStandadDialog.qml  TodoEditDialog.qml
org.kde.tomatodoing/contents/ui/Miscellaneous/: TomateImage.qml
org.kde.tomatodoing/contents/ui/Pages/: GeneralStatePage.qml  IdlePage.qml  LongBreakPage.qml  PausePage.qml  RingingPage.qml  ShortBreakPage.qml  SummarizingPage.qml  WorkingPage.qml
plugin/: CMakeLists.txt  calendarevent.cpp  calendarevent.h  calendartodo.cpp  calendartodo.h  filecalendar.cpp  filecalendar.h  filecalendarplugin.cpp  filecalendarplugin.h  incidence.cpp  incidence.h  qmldir  tomatodoing.cpp  tomatodoing.h  tomatodoingPlugin.cpp  tomatodoingPlugin.h
